--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,10 @@
             "servertype": "openocd",
             "preLaunchTask": "Build STM",
             "device": "stm32f103xb.s",
+            "liveWatch": {
+                "enabled": true,
+                "samplesPerSecond": 4
+            },
             "configFiles": [
                 "openocd.cfg"
             ]
